--- a/hidden.html
+++ b/hidden.html
@@ -3,34 +3,54 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title></title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sanghyun Lee | Hidden Page</title>
+  <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
 
+	<!--==== Meta Tags ====-->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/responsive.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://use.typekit.net/ptd1vvt.css">
+	<link rel="stylesheet" href="https://use.typekit.net/ptd1vvt.css">
 </head>
 
 <style>
 
 body {
-
-	background-image: url('grunge_patterns.jpg');
-	background-attachment: fixed;
-	color: #333;
+	font-family: var(--prim_font_fam);
+	color: var(--color_black, black);
+	font-size: 1em;
+}
+input {
+	font-family: var(--prim_font_fam);
+	color: var(--color_black, black);
+	font-size: 1em;
 }
 
+h1{
+	line-height: 1.5em;
+}
+/*
 .box {
 	border-radius: 3px;
 	background: rgba(101, 101, 101, 0.7); margin: auto; padding: 12px;
-}
+} */
 
 .lightbox {
-	zoom: 1.5;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(10, 10, 10, 0.8);
+	background-color: var(--background_color);
 	text-align: center;
 	margin: auto;
 
@@ -50,18 +70,40 @@ div.vertical {
 }
 
 ::-webkit-input-placeholder {
-   color: #955;
+   color: var(--color_grey, grey);
    text-align: center;
 }
 
 ::-moz-placeholder {
-   color: #955;
+   color: var(--color_grey, grey);
    text-align: center;
 }
 
 :-ms-input-placeholder {
-   color: #955;
+   color: var(--color_grey, grey);
    text-align: center;
+}
+
+input{
+	margin: 3em 0 1em 0;
+	text-align: center;
+	font-size: 1em;
+	padding: 1em
+}
+
+
+button {
+	background-color: var(--prim_color, blue);
+	border: none;
+	font-size: 1em;
+	color: var(--color_white, white);
+	padding: 1em 2em;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	margin: 1em 2em;
+	cursor: pointer;
+	border-radius: 3em;
 }
 
 </style>
@@ -72,9 +114,16 @@ div.vertical {
 		<div class="horizontal">
 			<div class="vertical">
 				<div class="box">
-					<input style="margin: 16px; text-align: center;" id="password" type="password" placeholder="password" /> <br />
+					<span style="font-size:3em;">
+					<i class="fas fa-lock"></i>
+					</span>
+					<h1>This content is protected.
+						<br>To view it please enter your password below.
+					</h1>
+
+					<input id="password" type="password" placeholder="Enter Your Password" /> <br />
 					<button id="loginbutton" type="button">Enter</button>
-					<p id="wrongPassword" style="display: none">wrong password</p>
+					<p id="wrongPassword" style="display: none">Please Try Again</p>
 				</div>
 			</div>
 		</div>
@@ -111,7 +160,7 @@ div.vertical {
 				parent.location.hash= hash;
 
 				//$("#wrongPassword").show();
-				$("#password").attr("placeholder","wrong password");
+				$("#password").attr("placeholder","Please Try Again");
 				$("#password").val("");
 			}
 		});
