--- a/hidden.html
+++ b/hidden.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -37,6 +35,7 @@ input {
 
 h1{
 	line-height: 1.5em;
+	margin-bottom: 1em;
 }
 /*
 .box {
@@ -85,10 +84,12 @@ div.vertical {
 }
 
 input{
-	margin: 3em 0 1em 0;
+	margin: 1em 0 1em 0;
 	text-align: center;
 	font-size: 1em;
-	padding: 1em
+	padding: 1em;
+	font-weight: 200;
+	width: 250px;
 }
 
 
@@ -101,10 +102,32 @@ button {
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	margin: 1em 2em;
+	margin: 1em 1em;
 	cursor: pointer;
 	border-radius: 3em;
+	font-family: var(--prim_font_fam);
 }
+
+span{
+	font-size: 2em;
+	display: block;
+}
+
+i{
+	margin-top: .25em;
+}
+
+i:hover{
+	color: var(--color_black, black);
+}
+
+.link > p{
+	margin: 1em 0 0 0;
+	bottom: 0;
+	font-size: .75em;
+}
+
+
 
 </style>
 
@@ -114,20 +137,24 @@ button {
 		<div class="horizontal">
 			<div class="vertical">
 				<div class="box">
-					<span style="font-size:3em;">
+					<h1>2019 Google Design Exercise<br>by Sanghyun Lee</h1>
+					<span>
 					<i class="fas fa-lock"></i>
 					</span>
-					<h1>This content is protected.
+					<!-- <h3>This content is protected.
 						<br>To view it please enter your password below.
-					</h1>
-
-					<input id="password" type="password" placeholder="Enter Your Password" /> <br />
+					</h3> -->
+					<input id="password" type="password" placeholder="Please enter your password" /> <br />
 					<button id="loginbutton" type="button">Enter</button>
 					<p id="wrongPassword" style="display: none">Please Try Again</p>
+					<div class="link">
+							<p>Explore <a href="index.html">Sanghyun's Portfolio Website</a></p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
 
 
 
@@ -144,7 +171,7 @@ button {
 
 		var hash= pwd;
 		hash= Sha1.hash(pwd);
-		var url= hash + "/index.html";
+		var url= hash + "/mhub.html";
 
 		$.ajax({
 			url : url,
